@startuml

title __PACKAGERUNNER's Class Diagram__\n

  namespace packageRunner {
    class packageRunner.AnimatedSprite {
        # imageView : ImageView
        - attitude : int
        - count : int
        - cycleDurationMs : double
        - height : int
        - jump : boolean
        - lastIndex : int
        - offsetX : int
        - offsetY : int
        - width : int
        + AnimatedSprite()
        + jump()
        + update()
    }
  }
  

  namespace packageRunner {
    class packageRunner.Camera {
        ~ lastTime : long
        - f : double
        - fos : FileOutputStream
        - k : double
        + Camera()
        + update()
    }
  }
  

  namespace packageRunner {
    class packageRunner.Spring {
        - k : double
        + Spring()
        + getForceX()
        + getForceY()
    }
  }
  

  namespace packageRunner {
    class packageRunner.demoRun {
        ~ timer : AnimationTimer
        {static} - COUNT : int
        {static} - HEIGHT : int
        {static} - HEROSHEET : Image
        {static} - OFFSET_X : int
        {static} - OFFSET_Y : int
        {static} - SCENERY : Image
        {static} - WIDTH : int
        - imageViewHero : ImageView
        - imageViewSceneryLeft : ImageView
        - imageViewSceneryRight : ImageView
        - lastTime : long
        {static} + main()
        + start()
    }
  }
  

  namespace packageRunner {
    abstract class packageRunner.movingThings {
        # ax : double
        # ay : double
        # px : double
        # py : double
        # vx : double
        # vy : double
        + getX()
        + getY()
        + movingThings()
        {abstract} + update()
    }
  }
  

  packageRunner.AnimatedSprite -up-|> packageRunner.movingThings
  packageRunner.Camera -up-|> packageRunner.movingThings
  packageRunner.Camera o-- packageRunner.AnimatedSprite : hero
  packageRunner.Spring o-- packageRunner.Camera : camera
  packageRunner.Spring o-- packageRunner.AnimatedSprite : hero
  packageRunner.demoRun -up-|> javafx.application.Application
  packageRunner.demoRun o-- packageRunner.Camera : camera
  packageRunner.demoRun o-- packageRunner.AnimatedSprite : hero


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
